--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "eslint-plugin-prettier": "^2.6.0",
     "jest": "^22.4.0",
     "lint-staged": "^7.0.0",
-    "prettier": "^1.10.2"
+    "prettier": "^1.10.2",
+    "husky": "^0.14.3"
   },
   "dependencies": {
     "proj4": "^2.4.4"
