--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jest": "^21.12.2",
     "eslint-plugin-prettier": "^2.6.0",
+    "husky": "^0.14.3",
     "jest": "^22.4.0",
     "lint-staged": "^7.0.0",
-    "prettier": "^1.10.2",
-    "husky": "^0.14.3"
+    "prettier": "^1.10.2"
   },
   "dependencies": {
     "proj4": "^2.4.4"
