--- a/package.json
+++ b/package.json
@@ -4,13 +4,24 @@
   "description": "Reproject between coordinates systems. Supports EPSG codes.",
   "main": "src/main.js",
   "scripts": {
-    "test": "jest unit --coverage"
+    "precommit": "pretty-quick --staged && npm test",
+    "test": "jest unit --coverage",
+    "lint": "eslint src tests",
+    "format": "pretty-quick",
+    "pretest": "npm run lint"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/eduardogspereira/ptolemy-reproject.git"
   },
-  "keywords": ["GIS", "coordinates", "EPSG", "reproject", "UTM", "WGS84"],
+  "keywords": [
+    "GIS",
+    "coordinates",
+    "EPSG",
+    "reproject",
+    "UTM",
+    "WGS84"
+  ],
   "author": "Eduardo G. S. Pereira",
   "license": "MIT",
   "bugs": {
@@ -27,7 +38,8 @@
     "husky": "^0.14.3",
     "jest": "^22.4.0",
     "lint-staged": "^7.0.0",
-    "prettier": "^1.10.2"
+    "prettier": "^1.10.2",
+    "pretty-quick": "^1.6.0"
   },
   "dependencies": {
     "proj4": "^2.4.4"
